frontend-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-app
    labels:
        app: frontend-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend-app
    template:
        metadata:
            labels:
                app: frontend-app
        spec:                
            containers:
                - name: frontend-app
                  image: balavenkateshhub/hello-world:v1
                  ports:
                    - name: container-port
                      containerPort: 4242

---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    labels:
        app: frontend-service
spec:
    type: ClusterIP
    selector:
        app: frontend-app
    ports:
        - name: frontend-service-port
          port: 80
          targetPort: 4242
