frontend-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-app2
    labels:
        app: frontend-app2
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend-app2
    template:
        metadata:
            labels:
                app: frontend-app2
        spec:        
            containers:
                - name: fronend-app2
                  image: balavenkateshhub/hello-world:v2
                  ports:
                    - name: frontend-2-port
                      containerPort: 4242
---

apiVersion: v1
kind: Service
metadata:
    name: frontend-service-2
    labels:
        app: fronend-service-2
spec:                      
    type: ClusterIP
    selector:
        app: frontend-app2
    ports:
        - name: frontend-2-port
          port: 80
          targetPort: 4242
